# FastAPI_demo

./: .env  README.md  pyproject.toml
app/: main.py
app/api/v1/: test.py  users.py
app/core/: database.py
app/models/: user.py
app/repositories/: user.py
app/services/: user.py
